feat(nodes): indicate repeaters outside configured local borders
